fix fonts, box sizing and share buttons on mobile

--- a/src/css/modules/_header.scss
+++ b/src/css/modules/_header.scss
@@ -37,13 +37,13 @@
 }
 
 .header__title {
-    font-size: 3.2rem;
+    font-size: 3.2em;
     line-height: 0.9;
     font-weight: 200;
     color: $c-blue;
 
     @include mq(tablet) {
-        font-size: 4.6rem;
+        font-size: 4.6em;
         margin-bottom: -0.075em;
     }
 
@@ -53,7 +53,7 @@
 }
 
 .header__byline {
-    font-size: 1.8rem;
+    font-size: 1.8em;
 
     @include mq($until: tablet) {
         color: $c-blue;
@@ -62,7 +62,7 @@
 
 .header__description {
     color: $c-yellow;
-    font-size: 1.8rem;
+    font-size: 1.8em;
 }
 
 @keyframes headerLayers {
